[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/game/canal/1/entrance/entrance_riddle.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/riddleOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/game/canal/1/entrance/bg_riddle.png" type="Texture" id=3]
[ext_resource path="res://assets/game/canal/1/entrance/paper.png" type="Texture" id=4]
[ext_resource path="res://themes/text30.tres" type="Theme" id=5]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="riddleOverlay" parent="." instance=ExtResource( 2 )]

[node name="bg" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="paper" type="TextureFrame" parent="."]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 674.0
margin/top = 127.0
margin/right = 1370.0
margin/bottom = 535.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
alignment = 0

[node name="messageContainer" type="HBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 0
size_flags/vertical = 1
margin/left = 960.0
margin/top = 268.0
margin/right = 960.0
margin/bottom = 268.0
alignment = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 540.0
margin/right = 1920.0
margin/bottom = 540.0
columns = 1

[node name="typingZone" type="HBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 544.0
margin/right = 1920.0
margin/bottom = 1080.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/typingZone"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 247.0
margin/right = 1920.0
margin/bottom = 288.0
alignment = 0

[node name="typingField" type="LineEdit" parent="VBoxContainer/typingZone/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 0.0
margin/right = 1847.0
margin/bottom = 41.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="validateButton" type="Button" parent="VBoxContainer/typingZone/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 1851.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 41.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "AAA"
flat = false

[connection signal="pressed" from="VBoxContainer/typingZone/HBoxContainer/validateButton" to="." method="_on_validateButton_pressed"]


